[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
unionfind = { path = "../ds/unionfind" }
graph-base = { path = "../graph/graph-base" }
shortest_path = { path = "../graph/shortest_path" }
