[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
unionfind = { path = "../ds/unionfind" }
graph-base = { path = "../graph/graph-base" }
shortest_path = { path = "../graph/shortest_path" }
lowlink = { path = "../graph/lowlink" }
binary_indexed_tree = { path = "../ds/binary_indexed_tree" }
magma = { path = "../math/magma" }
monoid = { path = "../math/monoid" }
group = { path = "../math/group" }
monotone_minima = { path = "../math/monotone_minima" }

# 乱数
rand = "0.8.5"
