[package]
name = "binary_indexed_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magma = { path = "../../math/magma" }
monoid = { path = "../../math/monoid" }
group = { path = "../../math/group" }
